--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "video-auto-caption",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "captioner.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
